--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
     "serialport": "^9.0.1",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "uuid": "^8.3.1",
+    "uuidv4": "^6.2.4",
+    "xbee-api": "^0.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
