--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-validator": "^6.6.1",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "node-dijkstra": "^2.5.0",
     "parser-readline": "^1.0.2",
     "path": "^0.12.7",
     "pg": "^8.3.3",
